// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`quote Empty quote 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "nodes": Array [],
        "raw": ">",
        "type": "quote",
      },
    ],
    "type": "line",
  },
]
`;

exports[`quote Simple quote 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "nodes": Array [
          Object {
            "raw": " Simple quote",
            "text": " Simple quote",
            "type": "plain",
          },
        ],
        "raw": "> Simple quote",
        "type": "quote",
      },
    ],
    "type": "line",
  },
]
`;
